[package]
name = "genet-host-api"
version = "0.1.0"
repository = "https://github.com/mark-ik/genet"
publish = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Product-neutral host contracts for Genet: engine profiles, capabilities, resource fetching, and tile composition."

[lib]
name = "genet_host_api"
path = "lib.rs"
bench = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)', 'cfg(llvm_pgo)'] }
