[package]
name = "genet-render"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Genet host render-driver: a ScriptedDom / LayoutDom -> netrender::Scene assembly (cascade -> layout -> paint emit -> Scene), plus the host spatial queries (hit-test, fragments, caret / selection rects) and accessibility-tree emission. The thin, GPU-free glue genet-side hosts share, sitting on genet-layout + paint_list_render; scene *production*, separate from presentation (genet-winit-host)."

[lib]
name = "genet_render"
path = "src/lib.rs"

[dependencies]
# The genet DOM + the engine pipeline this drives.
genet-scripted-dom = { path = "../genet-scripted-dom" }
genet-layout = { path = "../genet-layout" }
layout_dom_api = { workspace = true }
# Paint-list -> netrender::Scene lowering (aliased `paint`), the Scene type, and
# the paint/query value types.
paint = { workspace = true }
paint_list_api = { workspace = true }
paint_list_render = { workspace = true }
netrender = { workspace = true }
# Engine-observable query surface: hit_test (point -> node) behind FragmentQuery.
engine_observables_api = { workspace = true }
# The introspection CONTRACT types (`ContentReport` / `OutlineEntry`) live in the
# contracts crate so `DocumentSession::inspect` can name them; this crate keeps
# the LayoutDom -> report builder and re-exports the types for its consumers.
inker = { path = "../inker" }
# Accessibility tree emission: ScriptedDom -> accesskit::TreeUpdate (a host
# concern, kept out of the core layout crate).
accesskit = { workspace = true }
# taffy must match genet-layout's experimental pin (layout() takes a taffy::Size
# viewport); euclid for the viewport size the image planes carry.
taffy = { version = "=0.12.1", default-features = false, features = ["std", "taffy_tree", "block_layout", "flexbox", "grid", "float_layout", "calc", "content_size", "detailed_layout_info"] }
euclid = { workspace = true }

[dev-dependencies]
# A parsed HTML document for the content-introspection (`inspect`) tests.
genet-static-dom = { path = "../genet-static-dom" }
