[package]
name = "genet-static-dom"
version = "0.1.0"
repository = "https://github.com/mark-ik/genet"
publish = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Script-free static DOM provider for low Genet profiles."

[lib]
path = "lib.rs"

[dependencies]
html5ever = { workspace = true }
# XHTML: xml5ever is a sibling of html5ever over the same markup5ever interface,
# so it drives the same StaticTreeSink. See docs/2026-05-31_css_rendering_conformance_plan.md.
xml5ever = { workspace = true }
layout_dom_api = { workspace = true }
