[package]
name = "genet-static-html"
version = "0.1.0"
repository = "https://github.com/mark-ik/genet"
# Ring 3, not ring 0 (2026-07-11): this crate deps servo-layout-api, a
# MODIFIED Servo component whose name+version collide with Servo's published
# crate — a registry build silently resolves upstream and loses the fork's
# LayoutHostServices. Publishes only if/when the fork family publishes under
# its own names (see docs/2026-07-11_genet_publish_rings_plan.md, ring 3).
publish = false
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Static HTML profile witness for the Genet profile ladder."

[lib]
path = "lib.rs"

[dependencies]
layout_api = { workspace = true }
paint_api = { workspace = true }
paint_types = { workspace = true }
genet-static-dom = { version = "0.1.0", path = "../genet-static-dom" }
servo-url = { workspace = true }
