[package]
name = "livery"
version = "0.0.2"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mark-ik/genet"
description = "Clean-room, generated CSS property and cascade engine."
readme = "README.md"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
toml = "1"
