[package]
name = "livery"
version = "0.0.2"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/mark-ik/genet"
description = "Generated CSS property and cascade engine for Genet."
readme = "README.md"

[dependencies]
cssparser.workspace = true
precomputed-hash = "0.1"
selectors = "0.39"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
toml = "1"
