[package]
name = "servo-malloc-size-of"
license = "MIT OR Apache-2.0"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
repository.workspace = true
description.workspace = true

[lib]
path = "lib.rs"

[dependencies]
app_units = { workspace = true }
atomic_refcell = { workspace = true }
content-security-policy = { workspace = true }
crossbeam-channel = { workspace = true }
data-url = { workspace = true }
encoding_rs = '0.8'
euclid = { workspace = true }
http = { workspace = true }
icu_locid = { workspace = true }
indexmap = { workspace = true }
ipc-channel = { workspace = true }
keyboard-types = { workspace = true }
markup5ever = { workspace = true }
mime = { workspace = true }
parking_lot = { workspace = true }
resvg = { workspace = true }
servo_arc = { workspace = true }
smallvec = { workspace = true }
string_cache = { workspace = true }
stylo = { workspace = true }
stylo_dom = { workspace = true }
stylo_malloc_size_of = { workspace = true }
taffy = { workspace = true }
tendril = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
unicode-bidi = { workspace = true }
unicode-script = { workspace = true }
url = { workspace = true }
urlpattern = { workspace = true }
uuid = { workspace = true }

# wasm de-IPC pass (2026-06-06): servo-allocator installs a native global allocator
# (jemalloc); its API is unused here (MallocSizeOf is allocator-agnostic via stylo's
# MallocSizeOfOps), so wasm simply uses the default allocator.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
servo-allocator = { workspace = true }

# uuid v4 needs a wasm randomness backend. Enabling `js` here (malloc_size_of is
# always in the wasm graph via Stylo) unifies it across the whole wasm build, so
# the workspace uuid stays plain and native stays wasm-bindgen-free.
[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { workspace = true, features = ["js"] }
