[package]
name = "nematic"
# Own version line (not workspace): published crate, 0.0.1 name-claim bumped to
# 0.1.0 on first publish from this repo (inker-adoption plan, 2026-07-09).
version = "0.1.0"
edition.workspace = true
license.workspace = true
# Not workspace: serval's workspace repository still points at upstream servo.
repository = "https://github.com/mark-ik/serval"
description = "Portable smolweb rendering engine — Gemini, Gopher, Markdown, feeds, and the knot note format, lowered to the inker document model."
documentation = "https://docs.rs/nematic"
readme = "README.md"
keywords = ["smolweb", "gemini", "gopher", "rendering", "engine"]
categories = ["web-programming", "rendering"]
# Override serval's workspace-wide publish = false: nematic is a published crate.
publish = true

[features]
default = []
# The native render lane (nematic::views): per-format xilem-serval views over
# errand's ASTs, with theming. Off by default so block-engine consumers stay
# clear of the view/render stack.
views = ["dep:xilem-serval"]

[lib]
path = "src/lib.rs"

[dependencies]
inker = { workspace = true }
# Smolweb parsers: the portable per-format ASTs the engines below lower into
# `DocumentBlock`. The parse layer (gemtext/gopher/nex/feed) lives in errand
# (transport + parse, one smolweb crate — a workspace sibling since the
# 2026-07-10 adoption); nematic owns only the AST -> block lowering.
errand = { workspace = true }
pulldown-cmark = { version = "0.13", default-features = false }
# Djot pull-parser for the knot djot-substrate proof-of-concept (knot/djot.rs;
# design doc §10). Additive alongside pulldown-cmark during the migration.
jotdown = "0.10"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
# Version req so the crate can publish: locally the path satisfies it; on
# the registry the xilem-serval name-claim stub does (a consumer enabling
# `views` from crates.io needs the real component, i.e. the serval git dep,
# until serval's view stack publishes for real).
xilem-serval = { package = "serval-xilem", version = "0.1.0", path = "../xilem-serval", optional = true }

[dev-dependencies]
# The views tests build into a real ScriptedDom and inspect the result
# (moved with the views from the retired smolweb-views component).
serval-scripted-dom = { path = "../serval-scripted-dom" }
layout_dom_api = { package = "layout-dom-api", path = "../shared/layout-dom" }

# `test = true` runs the example's embedded round-trip tests under `cargo test`.
[[example]]
name = "knot-render"
test = true
