[package]
name = "servo-paint"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
repository.workspace = true
description.workspace = true

[lib]
name = "paint"
path = "lib.rs"

[features]
default = []
tracing = []
wgpu_backend = []
webgpu = ["dep:webgpu"]
webxr = ["dep:webxr", "dep:webxr-api"]

[lints.clippy]
unwrap_used = "deny"
panic = "deny"

[dependencies]
crossbeam-channel = { workspace = true }
embedder_traits = { workspace = true }
paint_api = { workspace = true }
profile_traits = { workspace = true }
servo-base = { workspace = true }
servo-constellation-traits = { workspace = true }
webgpu = { workspace = true, optional = true }
webxr = { workspace = true, optional = true }
webxr-api = { workspace = true, optional = true }
