[package]
name = "servo-paint"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
repository.workspace = true
description.workspace = true

[lib]
name = "paint"
path = "lib.rs"

[features]
default = []
tracing = []
wgpu_backend = []
webgpu = ["dep:webgpu"]
webxr = ["dep:webxr", "dep:webxr-api"]

[dev-dependencies]
euclid = { workspace = true }
servo-geometry = { workspace = true }
stylo_traits = { workspace = true }

[lints.clippy]
unwrap_used = "deny"
panic = "deny"

[dependencies]
crossbeam-channel = { workspace = true }
dpi = { workspace = true }
embedder_traits = { workspace = true }
euclid = { workspace = true }
image = { workspace = true }
log = { workspace = true }
netrender = { workspace = true }
netrender_device = { workspace = true }
paint_api = { workspace = true, features = ["wgpu_backend"] }
paint_types = { workspace = true }
raw-window-handle = { workspace = true }
profile_traits = { workspace = true }
rustc-hash = { workspace = true }
servo-base = { workspace = true }
servo-constellation-traits = { workspace = true }
servo-geometry = { workspace = true }
stylo_traits = { workspace = true }
wgpu = { workspace = true }
webgpu = { workspace = true, optional = true }
webxr = { workspace = true, optional = true }
webxr-api = { workspace = true, optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true }

[target.'cfg(target_vendor = "apple")'.dependencies]
# C4 macOS compositor backend (compositor_calayer.rs).
objc2 = { workspace = true }
objc2-core-foundation = { workspace = true }
objc2-foundation = { workspace = true }
objc2-quartz-core = { workspace = true }
objc2-metal = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
# AppKit-only — used by `compositor_factory.rs` to extract the
# NSView's `CALayer` from `RawWindowHandle::AppKit`. Not in the
# `cfg(target_vendor = "apple")` block above because AppKit is a
# Mac-only framework; iOS / iPadOS go through UIKit instead.
objc2-app-kit = { workspace = true }
