[package]
name = "servo-paint"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
repository.workspace = true
description.workspace = true

[lib]
name = "paint"
path = "lib.rs"

[features]
default = []
tracing = []
wgpu_backend = []
webgpu = ["dep:webgpu"]
webxr = ["dep:webxr", "dep:webxr-api"]

[dev-dependencies]
base64 = { workspace = true }
euclid = { workspace = true }
html5ever = { workspace = true }
malloc_size_of = { workspace = true }
malloc_size_of_derive = { workspace = true }
pollster = "0.4"
serde = { workspace = true, features = ["derive"] }
serval-layout = { path = "../serval-layout" }
serval-static-dom = { path = "../serval-static-dom" }
servo-geometry = { workspace = true }
stylo_traits = { workspace = true }
# Matches serval-layout's taffy (its tests pass taffy::Size into
# serval-layout::layout, so the versions must unify). See
# docs/2026-05-20_stylo_taffy_adoption_plan.md.
taffy = { version = "=0.11.0-experimental-cache-fix.3", default-features = false, features = ["std", "taffy_tree", "block_layout", "flexbox", "grid", "float_layout", "calc", "detailed_layout_info"] }
webgl_wgpu = { workspace = true }

[lints.clippy]
unwrap_used = "deny"
panic = "deny"

[dependencies]
crossbeam-channel = { workspace = true }
dpi = { workspace = true }
embedder_traits = { workspace = true }
euclid = { workspace = true }
image = { workspace = true }
log = { workspace = true }
netrender = { workspace = true }
netrender_device = { workspace = true }
paint_api = { workspace = true, features = ["wgpu_backend"] }
paint_list_api = { workspace = true }
paint_list_render = { workspace = true }
paint_types = { workspace = true }
raw-window-handle = { workspace = true }
profile_traits = { workspace = true }
rustc-hash = { workspace = true }
servo-base = { workspace = true }
servo-constellation-traits = { workspace = true }
servo-geometry = { workspace = true }
stylo_traits = { workspace = true }
wgpu = { workspace = true }
webgpu = { workspace = true, optional = true }
webxr = { workspace = true, optional = true }
webxr-api = { workspace = true, optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true }

[target.'cfg(target_vendor = "apple")'.dependencies]
# C4 macOS compositor backend (compositor_calayer.rs).
objc2 = { workspace = true }
objc2-core-foundation = { workspace = true, features = ["CFBase", "CFDictionary", "CFString", "CFNumber"] }
objc2-foundation = { workspace = true }
objc2-io-surface = { workspace = true }
objc2-quartz-core = { workspace = true }
objc2-metal = { workspace = true, features = ["MTLDevice", "MTLTexture", "MTLAllocation", "MTLResource", "objc2-io-surface"] }

[target.'cfg(target_os = "macos")'.dependencies]
# AppKit-only — used by `compositor_factory.rs` to extract the
# NSView's `CALayer` from `RawWindowHandle::AppKit`. Not in the
# `cfg(target_vendor = "apple")` block above because AppKit is a
# Mac-only framework; iOS / iPadOS go through UIKit instead.
objc2-app-kit = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
# C4 Wayland compositor backend (compositor_wayland/). ash version matches
# wgpu-hal 29's lockfile-pinned 0.38.0+1.3.281 so the types line up.
ash = "0.38"
# Bake pipeline uniform upload (compositor_wayland/bake.rs).
bytemuck = { workspace = true }
smallvec = { workspace = true }
# `system` feature enables `wayland-backend/client_system`, which is what
# exposes `Backend::from_foreign_display(*mut wl_display)` + `ObjectId::from_ptr`.
# We need both to adopt the embedder-owned wl_display/wl_surface from
# raw-window-handle rather than opening a fresh connection.
wayland-client = { version = "0.31", features = ["system"] }
wayland-protocols = { version = "0.32", features = ["client", "unstable", "staging"] }
