# Boa backend for script-engine-api. Pure Rust, builds on all targets — it is the
# wasm32 scripting backend (Nova is 64-bit-bound / native-only; see Appendix B in
# docs/2026-05-20_serval_script_engine_plan.md) and the native conformance oracle.
[package]
name = "script-engine-boa"
version = "0.0.0"
edition = "2021"
license = "MPL-2.0"
publish = false

[lib]
name = "script_engine_boa"
path = "lib.rs"

[dependencies]
script-engine-api = { path = "../script-engine-api" }
boa_engine = "0.21"
boa_gc = "0.21"
# Both resolve to the crates/boa `serval` fork via serval's root [patch.crates-io]
# (icu family bumped ~2.0 -> ~2.1), which unifies boa's icu_normalizer with parley
# 0.9 at 2.1.1. That's why this crate is now a serval workspace member (was a
# standalone [workspace] until 2026-05-25). See
# ../../docs/2026-05-20_serval_script_engine_plan.md.

