# Nova backend for script-engine-api — the primary backend on 64-bit targets.
# Nova is pointer-width-bound (its `Value` is usize-sized), so `nova_vm` is gated
# by pointer width rather than by native-vs-wasm. This admits wasm64 while keeping
# every 32-bit target (including wasm32) on the Boa backend.
#
# `nova_vm` is redirected to the local fork checkout (serval-embedder branch, which
# carries the EmbedderObject native-data patch) via [patch.crates-io] in the
# workspace root Cargo.toml.
[package]
name = "script-engine-nova"
version = "0.0.0"
edition = "2021"
license = "MPL-2.0"
publish = false

[lib]
name = "script_engine_nova"
path = "lib.rs"

[dependencies]
script-engine-api = { path = "../script-engine-api" }

[target.'cfg(all(target_pointer_width = "64", not(target_family = "wasm")))'.dependencies]
nova_vm = "1"

[target.'cfg(all(target_pointer_width = "64", target_family = "wasm"))'.dependencies]
# The first browser lane keeps ArrayBuffer/TypedArray but deliberately excludes
# SharedArrayBuffer, Atomics, and Temporal. Shared JS memory is a later threaded
# artifact; Temporal currently pulls a wasm32-only timezone provider.
nova_vm = { version = "1", default-features = false, features = [
    "math",
    "json",
    "date",
    "array-buffer",
    "weak-refs",
    "regexp",
    "set",
    "annex-b",
] }
